--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "description": "Проект «Большое путешествие» от HTML Academy",
   "scripts": {
-    "lint": "eslint src/",
-    "build": "webpack --mode production"
+    "lint": "eslint src/"
   },
   "devDependencies": {
     "eslint": "8.38.0",
