--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "dependencies": {
     "dayjs": "1.11.7",
     "flatpickr": "4.6.13",
-    "lodash": "^4.17.21",
-    "nanoid": "^5.0.1"
+    "lodash": "4.17.21",
+    "nanoid": "5.0.1"
   }
 }
